--- a/mb.html
+++ b/mb.html
@@ -76,14 +76,15 @@
             cursor: pointer;
         }
 
-        /* Hero Section - Treat as Portrait Photos */
+        /* Hero Section - Like the working static image */
         .hero {
             min-height: 100vh;
             position: relative;
             overflow: hidden;
             display: flex;
-            align-items: center;
+            align-items: flex-end;
             justify-content: center;
+            padding-bottom: 6rem;
         }
 
         .slideshow-container {
@@ -103,9 +104,10 @@
             height: 100%;
             opacity: 0;
             transition: opacity 2s ease-in-out;
-            background-size: cover;
+            background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
+            background-color: var(--warm-white);
         }
 
         .slide.active {
@@ -121,9 +123,9 @@
             bottom: 0;
             background: linear-gradient(
                 to bottom, 
-                rgba(0,0,0,0.3) 0%, 
-                rgba(0,0,0,0.1) 50%, 
-                rgba(0,0,0,0.6) 100%
+                rgba(0,0,0,0) 0%, 
+                rgba(0,0,0,0) 60%, 
+                rgba(0,0,0,0.7) 100%
             );
             z-index: 2;
         }
@@ -140,7 +142,10 @@
             text-align: center;
             color: white;
             padding: 2rem 1rem;
-            max-width: 90%;
+            max-width: 95%;
+            background: rgba(0,0,0,0.8);
+            border-radius: 20px;
+            backdrop-filter: blur(10px);
         }
 
         .hero-content h1 {
@@ -683,10 +688,4 @@
                         <h3>茶道体験プラン</h3>
                         <p>畳の茶室でお抹茶を点てて、季節の和菓子を味わいながら、心がじんわりと落ち着いていく——そんな、"静かな感動"を味わえます。</p>
                         <div class="service-price">10,000円/人（税込）</div>
-                        <p style="font-size: 0.9rem; margin-top: 1rem; color: #d4af37;">4名以上のご予約で20%OFF!</p>
-                    </div>
-                    
-                    <div class="service-card">
-                        <div class="service-icon">時</div>
-                        <h3>選べる時間帯</h3>
- 
+                        <p style="font-size: 0.9rem; margin-top: 1rem; color: #d4af37;">4名以上のご予約で20%
