--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            background-color: #1a1a1a;
         }
 
         .slideshow-container {
@@ -168,19 +169,15 @@
             width: 100%;
             height: 100%;
             opacity: 0;
-            transition: all 2s cubic-bezier(0.4, 0, 0.2, 1);
-            background-size: cover;
+            transition: opacity 1s ease;
+            background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
-            background-color: var(--warm-white);
-            transform: scale(1.1);
-            filter: brightness(0.9);
+            background-color: #1a1a1a;
         }
 
         .slide.active {
             opacity: 1;
-            transform: scale(1);
-            filter: brightness(1);
         }
 
 
@@ -192,12 +189,13 @@
             right: 0;
             bottom: 0;
             background: linear-gradient(
-                135deg, 
-                rgba(74, 92, 58, 0.3) 0%, 
-                rgba(0,0,0,0.2) 50%, 
-                rgba(212, 175, 55, 0.2) 100%
+                to bottom, 
+                rgba(0,0,0,0.5) 0%, 
+                rgba(0,0,0,0.3) 50%, 
+                rgba(0,0,0,0.6) 100%
             );
             z-index: 2;
+            pointer-events: none;
         }
 
         .slide1 { background-image: url('tea-ceremony-1.jpg'); }
